# dspy-qwen-adapter

./: .gitignore  .gitmodules  CHECKLIST.md  README.md  pyproject.toml  qwen-35-toolnotes-from-reddit.md
docs/: benchmarks.md
docs/plans/: 2026-04-16-qwen35-adapter-design.md  2026-04-16-qwen35-adapter.md
dspy_qwen35_adapter/: __init__.py  adapter.py  parsing.py  prompts.py
dspy_qwen_adapter/: __init__.py  adapter.py  parsing.py  prompts.py
harness/: analyze.py  judge.py  run_eval.py  run_matrix.sh  scenarios.py  smoke_modules.py  smoke_optimizer.py
harness/results/: summary.md
harness/results/qwen3-4b-judged/: 20260418-083937-chat-s1.csv  20260418-084021-chat-s3.csv  20260418-084210-chat-s10.csv  20260418-084405-chat-s_sql.csv  20260418-084534-chat-s_code.csv  20260418-091717-chat-s_echo.csv  20260418-092241-chat-s_deep.csv  20260418-092846-chat-s_i18n.csv  20260418-093023-json-s1.csv  20260418-093104-json-s3.csv  20260418-095339-json-s10.csv  20260418-095512-json-s_sql.csv  20260418-095635-json-s_code.csv  20260418-103038-json-s_echo.csv  20260418-103609-json-s_deep.csv  20260418-104045-json-s_i18n.csv  20260418-104148-xml-s1.csv  20260418-104234-xml-s3.csv  20260418-104428-xml-s10.csv  20260418-104609-xml-s_sql.csv  20260418-104713-xml-s_code.csv  20260418-113008-xml-s_echo.csv  20260418-113549-xml-s_deep.csv  20260418-114053-xml-s_i18n.csv  20260418-114207-qwen35-s1.csv  20260418-114247-qwen35-s3.csv  20260418-114354-qwen35-s10.csv  20260418-114515-qwen35-s_sql.csv  20260418-114616-qwen35-s_code.csv  20260418-114916-qwen35-s_echo.csv  20260418-115213-qwen35-s_deep.csv  20260418-115714-qwen35-s_i18n.csv  summary.md
harness/results/qwen3.5-4b/: 20260417-093644-chat-s1.csv  20260417-095158-chat-s10.csv  20260417-095542-chat-s_code.csv  (+15 more)
harness/results/qwen3.5-4b-judged/: 20260417-170940-chat-s1.csv  20260417-172408-chat-s3.csv  20260417-172722-chat-s10.csv  20260417-173227-chat-s_sql.csv  20260417-173451-chat-s_code.csv  20260417-173923-chat-s_echo.csv  20260417-174245-chat-s_deep.csv  20260417-175213-chat-s_i18n.csv  20260417-175711-json-s1.csv  20260417-175943-json-s3.csv  20260417-180248-json-s10.csv  20260417-180757-json-s_sql.csv  20260417-181208-json-s_code.csv  20260417-181643-json-s_echo.csv  20260417-182720-json-s_deep.csv  20260417-183708-json-s_i18n.csv  20260417-185034-qwen35-s1.csv  20260417-185240-qwen35-s3.csv  20260417-185505-qwen35-s10.csv  20260417-185818-qwen35-s_sql.csv  20260417-190035-qwen35-s_code.csv  20260417-190330-qwen35-s_echo.csv  20260417-190610-qwen35-s_deep.csv  20260417-191106-qwen35-s_i18n.csv  20260418-075620-xml-s1.csv  20260418-075856-xml-s3.csv  20260418-080241-xml-s10.csv  20260418-080758-xml-s_sql.csv  20260418-081140-xml-s_code.csv  20260418-081254-xml-s_echo.csv  20260418-081609-xml-s_deep.csv  20260418-082452-xml-s_i18n.csv  summary.md
tests/: test_adapter_integration.py  test_judge.py  test_parsing.py  test_prompts.py
(+988 files in other folders)
