[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dspy-qwen-adapter"
version = "0.1.0"
description = "DSPy adapter for Qwen 3.5 and 3.6 recommended formatting"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "dspy>=3.1",
    "json-repair>=0.25",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov"]

[tool.hatch.build.targets.wheel]
packages = ["dspy_qwen_adapter"]

[tool.hatch.build.targets.sdist]
exclude = ["tests/", "harness/", "docs/", "dspy/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
